# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2

  06 Aug 2002; Martin Schlemmer <azarah@gentoo.org> ebuild.sh : only save
  the environment of ebuild.sh when $T is valid, else /saved_ebuild_env_
  is created.

  05 Aug 2002; Phil Bordelon <sunflare@gentoo.org> emerge.1: Updated the
  man page to match the current version of 2.0.25.

*portage-2.0.25 (05 Aug 2002)

  05 Aug 2002; Daniel Robbins <drobbins@gentoo.org> src/sandbox/Makefile:
  removed -march=i386 added in Azarah's patch; breaks things for PPC, Sparc.
  
  05 Aug 2002; Daniel Robbins <drobbins@gentoo.org> emerge: logic error fix for
  description searching, closing bug #6031.

*portage-2.0.24 (04 Aug 2002)

  04 Aug 2002; Daniel Robbins <drobbins@gentoo.org> output.py, emerge: rewrote
  our output.py module (it was weird) and tweaked emerge so that colorization
  will be disabled if NOCOLOR is set to "yes" or "true" *or* if sys.stdout isn't
  a tty.  This means that if you pipe things to "less", colorization will get
  automatically disabled.  Yay!  This closes bug #5714, 
  
  04 Aug 2002; Daniel Robbins <drobbins@gentoo.org> ebuild.sh: default
  src_compile now properly uses "die" instead of "return 1."  This closes bug
  #2981.
  
  04 Aug 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: "=foo/bar-1.0*"
  now matches "foo/bar-1.0_{alpha|beta|pre|rc}{int}" but not
  "foo/bar-1.1_{alpha_beta_pre_rc}{int}".  This closes bug #5874; gcc-3.2_pre
  is now considered a "3.2" rather than a very late "3.1" when doing "*"
  matching.
  
  04 Aug 2002; Daniel Robbins <drobbins@gentoo.org> ebuild.sh: Applied
  carpaski's patch to allow "unpack" to also handle regular .gz or .bz2 files;
  in which case the unpacked files are placed directly in ${WORKDIR}.  Closing
  bug #5867.

  04 Aug 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: tweaked
  exithandler() to only do its sandbox clean-up if we happen to be the root